fix: Resolved table jumping around on mutation switcher open
Solved by setting table: min-width: max-content

--- a/mutest-ui/src/styles/style.css
+++ b/mutest-ui/src/styles/style.css
@@ -364,7 +364,7 @@ table {
         width: 100%;
 
         & > table {
-            min-width: 800px;
+            min-width: max-content;
         }
     }
 }
